// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Components - Snapshots JobCard should match snapshot for completed job 1`] = `
<TouchableOpacity
  accessibilityLabel="Job: Electrical Work, , completed"
  accessibilityRole="button"
  activeOpacity={0.95}
  onPress={[Function]}
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 16,
      "marginHorizontal": 4,
      "marginVertical": 6,
      "padding": 18,
      "shadowColor": "#000000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.06,
      "shadowRadius": 10,
    }
  }
  testID="job-card"
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "marginBottom": 10,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#F7F7F7",
          "borderRadius": 12,
          "height": 40,
          "justifyContent": "center",
          "marginRight": 12,
          "width": 40,
        }
      }
    >
      <Text
        color="#717171"
        name="construct"
        size={18}
      >
        construct
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
          "marginRight": 8,
        }
      }
    >
      <Text
        numberOfLines={2}
        style={
          {
            "color": "#222222",
            "fontSize": 16,
            "fontWeight": "600",
            "lineHeight": 22,
          }
        }
      >
        Electrical Work
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#222222",
          "fontSize": 18,
          "fontWeight": "700",
          "letterSpacing": -0.3,
        }
      }
    >
      £0
    </Text>
  </View>
  <Text
    numberOfLines={2}
    style={
      {
        "color": "#717171",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 14,
      }
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 12,
            "paddingHorizontal": 10,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "#6B7280",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 12,
              "fontWeight": "600",
            },
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        Completed
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    />
    <Text
      color="#B0B0B0"
      name="chevron-forward"
      size={16}
    >
      chevron-forward
    </Text>
  </View>
</TouchableOpacity>
`;

exports[`Card Components - Snapshots JobCard should match snapshot for pending job 1`] = `
<TouchableOpacity
  accessibilityLabel="Job: Plumbing Repair, , posted"
  accessibilityRole="button"
  activeOpacity={0.95}
  onPress={[Function]}
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 16,
      "marginHorizontal": 4,
      "marginVertical": 6,
      "padding": 18,
      "shadowColor": "#000000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.06,
      "shadowRadius": 10,
    }
  }
  testID="job-card"
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "marginBottom": 10,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#F7F7F7",
          "borderRadius": 12,
          "height": 40,
          "justifyContent": "center",
          "marginRight": 12,
          "width": 40,
        }
      }
    >
      <Text
        color="#717171"
        name="construct"
        size={18}
      >
        construct
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
          "marginRight": 8,
        }
      }
    >
      <Text
        numberOfLines={2}
        style={
          {
            "color": "#222222",
            "fontSize": 16,
            "fontWeight": "600",
            "lineHeight": 22,
          }
        }
      >
        Plumbing Repair
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#222222",
          "fontSize": 18,
          "fontWeight": "700",
          "letterSpacing": -0.3,
        }
      }
    >
      £500
    </Text>
  </View>
  <Text
    numberOfLines={2}
    style={
      {
        "color": "#717171",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 14,
      }
    }
  >
    Fix leaky faucet in bathroom
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 12,
            "paddingHorizontal": 10,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "#3B82F6",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 12,
              "fontWeight": "600",
            },
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        Posted
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    />
    <Text
      color="#B0B0B0"
      name="chevron-forward"
      size={16}
    >
      chevron-forward
    </Text>
  </View>
</TouchableOpacity>
`;
